# auth

./: Dockerfile  README.MD  alembic.ini  docker-compose.yml  docker-compose_db.yml  main.py  pyproject.toml
core/: models.py  services.py  settings.py
core/auth_backend/: authenticate.py
core/db/: dal.py  db_config.py  schema.py
migration/: env.py
migration/versions/: 884bee039437_.py  c053b5b63f24_.py
utils/: dependencies.py  http_exceptions.py  regex_checker.py  smtp_server.py  verify_code_gen.py
v1/: api.py  routers.py
